[package]
name = "casperfpga"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
anyhow = "1"
paste = "1"
packed_struct = "0.10"
nom = "7"
kstring = "2"

[lib]
name = "casperfpga"
crate-type = ["cdylib"]

[dependencies.casperfpga_derive]
path = "casperfpga_derive"
version = "0.1.0"

[dependencies.tapcp]
path = "tapcp"
version = "0.1.0"

[dependencies.pyo3]
version = "0.17"
features = ["extension-module"]

[workspace]
members = ["casperfpga_derive", "tapcp"]
