[package]
name = "casper_utils"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kiranshila/casperfpga_rs"
description = "Utilities for interacting with CASPER FPGA file formats"
homepage = "https://github.com/kiranshila/casperfpga_rs"
readme = "../README.md"
keywords = ["astronomy", "fpga"]
categories = ["hardware-support", "parser-implementations"]

[dependencies]
nom = "7"
kstring = "2"
anyhow = "1"
flate2 = "1"
md5 = "0.7"
