[package]
name = "casperfpga"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kiranshila/casperfpga_rs"
description = "A library for monitor and control of CASPER FPGA deivces"
homepage = "https://github.com/kiranshila/casperfpga_rs"
readme = "../README.md"
keywords = ["astronomy", "fpga"]
categories = ["hardware-support"]

[dependencies]
thiserror = "1"
paste = "1"
packed_struct = "0.10"
kstring = "2"
fixed = "1"
typenum = "1"
indicatif = "0.17"
num-traits = "0.2"
tftp_client = "0.1"

[dev-dependencies]
anyhow = "1"

[lib]
name = "casperfpga"
crate-type = ["lib"]

[dependencies.casperfpga_derive]
path = "../casperfpga_derive"
version = "0.2.0"

[dependencies.tapcp]
path = "../tapcp"
version = "0.2.0"

[dependencies.casper_utils]
path = "../casper_utils"
version = "0.2.0"
