[package]
name = "tapcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/kiranshila/casperfpga_rs"
description = "An implementation of the TAPCP protocol for CASPER FPGA devices"
homepage = "https://github.com/kiranshila/casperfpga_rs"
readme = "../README.md"
keywords = ["astronomy", "fpga", "tftp"]
categories = ["hardware-support"]

[dependencies]
anyhow = "1"
async-tftp = "0.3"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
kstring = "2"

[build-dependencies]
bindgen = "0.61"
cc = "1.0"
